syntax = "proto3";
package cni;
option go_package = "proto";

service CniDataplane {
    rpc Add (AddRequest) returns (AddReply) {}
    rpc Del (DelRequest) returns (DelReply) {}
}

message AddRequest {
    string interface_name = 1;
    string netns = 2;
    string desired_host_interface_name = 3;
    ContainerSettings settings = 4;
    repeated IPConfig container_ips = 5;
    repeated string container_routes = 6;
}

message ContainerSettings {
    bool allow_ip_forwarding = 1;
    int32 mtu = 2;
}

message IPConfig {
    string address = 1;
    string gateway = 2;
}

message AddReply {
    bool successful = 1;
    string error_message = 2;
    string host_interface_name = 3;
    string container_mac = 4;
}

message DelRequest {
    string interface_name = 1;
    string netns = 2;
}

message DelReply {
    bool successful = 1;
    string error_message = 2;
}
